# tsc-latency

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: measure_function.cpp  measure_overhead.cpp
include/tsclat/: bench.hpp  clock.hpp  histogram.hpp  tsc.hpp
test/: bench_test.cpp  check.hpp  clock_test.cpp  histogram_test.cpp  tsc_test.cpp
